# Qt-Text-Comparator-application

./: .gitignore  CMakeLists.txt  README.md  TextComparator.cpp  TextComparator.h  main.cpp
